# desert-rust

./: .gitignore  404.html  AGENTS.md  BENCHMARKS.md  CNAME  Cargo.toml  NOTES  README.md  codecs.html  deny.toml  evolution.html  getting_started.html  index.html  input_output.html  print.html  release-plz.toml  rust_vs_scala.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-2b3ccf61.js  searchindex-48cab41d.js  searchindex-98c34d6d.js  searchindex.js  searchindex.json  toc-bc47af81.js  toc-f74c4ee0.js  toc-fbb9c718.js  toc.html  toc.js  type_registry.html
.github/workflows/: ci.yml  release-plz.yml
book/: book.toml
book/src/: SUMMARY.md  codecs.md  evolution.md  getting_started.md  input_output.md  rust_vs_scala.md  type_registry.md
desert/: CHANGELOG.md  Cargo.toml
desert/src/: adt.rs  binary_input.rs  binary_output.rs  deserializer.rs  error.rs  evolution.rs  lib.rs  serializer.rs  state.rs  storable.rs
desert/src/features/: bigdecimal.rs  chrono.rs  mod.rs  uuid.rs
desert/tests/: coproduct.rs  derivation.rs  evolution.rs  evolved_fast_serialization.rs  golden.rs  string_deduplication.rs
desert/tests/serialization_properties/: mod.rs
desert_benchmarks/: Cargo.toml
desert_benchmarks/benches/: deser.rs  evolution_stress.rs  features.rs  golden.rs  golem_oplog.rs  golem_schema.rs  oplog.rs  ser.rs
desert_benchmarks/src/: golem_oplog.rs  golem_schema.rs  lib.rs  main.rs  model.rs
desert_book/: Cargo.toml
desert_book/src/: lib.rs  main.rs
desert_core/: Cargo.toml
desert_core/src/: adt.rs  binary_input.rs  binary_output.rs  error.rs  evolution.rs  lib.rs  state.rs  tests.rs
desert_core/src/adt/: deserializer.rs  mod.rs  serializer.rs
desert_core/src/deserializer/: mod.rs  tuples.rs
desert_core/src/features/: bigdecimal.rs  bit_vec.rs  chrono.rs  mac_address.rs  mod.rs  nonempty_collections.rs  serde_json.rs  url.rs  uuid.rs
desert_core/src/serializer/: mod.rs  tuples.rs
desert_macro/: Cargo.toml
desert_macro/src/: lib.rs
desert_macro/tests/: coproduct.rs  derivation.rs  evolution.rs  golden.rs  string_deduplication.rs
github/: Cargo.toml
github/src/: internal.rs  main.rs
src/: styles-5f396312.css  styles-ead747d8.css
