[package]
name = "desert_rust"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Binary serialization library for Rust"
homepage = "https://desert-rust.vigoo.dev"
repository = "https://github.com/vigoo/desert-rust"
readme = "../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
desert_core = { path = "../desert_core", version = "0.1.1" }
desert_macro = { path = "../desert_macro", version = "0.1.1" }

[dev-dependencies]

[features]
default = ["bigdecimal", "chrono", "uuid"]
bigdecimal = ["desert_core/bigdecimal"]
chrono = ["desert_core/chrono"]
uuid = ["desert_core/uuid"]
