[package]
name = "desert_rust"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
description = "Binary serialization library for Rust"
homepage = "https://desert-rust.vigoo.dev"
repository = "https://github.com/vigoo/desert-rust"
readme = "../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
desert_core = { path = "../desert_core", version = "0.1.4" }
desert_macro = { path = "../desert_macro", version = "0.1.5" }

[dev-dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
assert2 = "0.3"
bytes = "1.10"
lazy_static = "1.5"
proptest = "1.9"
proptest-arbitrary-interop = "0.1"
test-r = { workspace = true }
uuid = { version = "1.18", features = ["v4"] }

[[test]]
name = "coproduct"
harness = false

[[test]]
name = "derivation"
harness = false

[[test]]
name = "evolution"
harness = false

[[test]]
name = "golden"
harness = false

[[test]]
name = "string_deduplication"
harness = false

[features]
default = []
bigdecimal = ["desert_core/bigdecimal"]
bit-vec = ["desert_core/bit-vec"]
chrono = ["desert_core/chrono"]
mac_address = ["desert_core/mac_address"]
nonempty-collections = ["desert_core/nonempty-collections"]
serde-json = ["desert_core/serde-json"]
url = ["desert_core/url"]
uuid = ["desert_core/uuid"]
