[package]
name = "desert-benchmarks"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.golem.cloud/"
readme = "README.md"

[dependencies]
desert = { path = "../desert" }

bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bitcode = { version = "0.6.3", features = ["serde"] }
bytes = "1.9.0"
dlhn = "0.1.7"
iso8601-timestamp = "0.3.3"
lazy_static = "1.5.0"
postcard = { version = "1.1.1", features = ["use-std"] }
rand = "0.8.5"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = "1.0.217"
serde_bare = { version = "0.5.0", features = ["std"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
uuid = { version="1.11.1", features = ["serde", "v4"] }

[dev-dependencies]
criterion = "0.5.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "desert_benchmarks_oplog_main"
path = "src/main.rs"

[[bench]]
name = "oplog"
harness = false

[[bench]]
name = "golden"
harness = false

[[bench]]
name = "deser"
harness = false

[[bench]]
name = "ser"
harness = false
