[package]
name = "desert_benchmarks"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
desert_rust = { path = "../desert" }

bincode = { version = "2.0.1", features = ["serde"] }
bitcode = { version = "0.6.7", features = ["serde"] }
bytes = "1.10.1"
dlhn = "0.1.7"
iso8601-timestamp = "0.4.0"
lazy_static = "1.5.0"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.9.2"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = "1.0.228"
serde_bare = { version = "0.5.0", features = ["std"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
criterion = "0.7.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "desert_benchmarks_oplog_main"
path = "src/main.rs"

[[bench]]
name = "oplog"
harness = false

[[bench]]
name = "golden"
harness = false

[[bench]]
name = "deser"
harness = false

[[bench]]
name = "ser"
harness = false
