[package]
name = "desert_core"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = "Binary serialization library for Rust (core crate)"
homepage = "https://desert-rust.vigoo.dev"
repository = "https://github.com/vigoo/desert-rust"
readme = "../README.md"

[lib]
harness = false

[dependencies]
bytes = { version = "1.10" }
castaway = { version = "0.2", features = ["std"] }
flate2 = "1.1"
hashbrown = "0.16.0"
lazy_static = "1.5"
once_cell = "1.21.3"

bigdecimal = { version = "0.4", optional = true }
bit-vec = { version = "0.6", optional = true }
chrono = { version = "0.4", optional = true }
chrono-tz = { version = "0.10", optional = true }
mac_address = { version = "1.1", optional = true }
nonempty-collections = { version = "0.3.1", optional = true }
url = { version = "2.5", optional = true }
uuid = { version = "1.18", optional = true }
serde_json = { version = "1", optional = true }
stable-intrinsics = "0.1.1"

[dev-dependencies]
chrono = { version = "0.4", features = ["arbitrary"] }
chrono-tz = { version = "0.10", features = ["arbitrary"] }
proptest = "1.9"
proptest-arbitrary-interop = "0.1"
test-r = { workspace = true }
uuid = { version = "1.18", features = ["arbitrary"] }

[features]
default = ["bigdecimal", "chrono", "uuid", "nonempty-collections", "serde-json"]
bigdecimal = ["dep:bigdecimal"]
bit-vec = ["dep:bit-vec"]
chrono = ["dep:chrono", "dep:chrono-tz"]
mac_address = ["dep:mac_address"]
nonempty-collections = ["dep:nonempty-collections"]
serde-json = ["dep:serde_json"]
url = ["dep:url"]
uuid = ["dep:uuid"]
