[package]
name = "desert_macro"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[[test]]
name = "coproduct"
harness = false

[[test]]
name = "derivation"
harness = false

[[test]]
name = "evolution"
harness = false

[[test]]
name = "golden"
harness = false

[[test]]
name = "string_deduplication"
harness = false

[dependencies]
desert_core = { path = "../desert_core", version = "0.1.0" }

bytes = "1.9"
lazy_static = "1.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
assert2 = "0.3"
lazy_static = "1.5"
proptest = "1.6"
proptest-arbitrary-interop = "0.1"
test-r = { workspace = true }
uuid = { version = "1.12", features = ["v4"] }
