[package]
name = "desert_macro"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = "Binary serialization library for Rust (macros)"
homepage = "https://desert-rust.vigoo.dev"
repository = "https://github.com/vigoo/desert-rust"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
desert_core = { path = "../desert_core", version = "0.1.3" }

bytes = "1.10"
lazy_static = "1.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
assert2 = "0.3"
lazy_static = "1.5"
proptest = "1.9"
proptest-arbitrary-interop = "0.1"
test-r = { workspace = true }
uuid = { version = "1.18", features = ["v4"] }
